[tool.poetry]
name = "saidoka"
version = "0.1.0"
description = "Sidecar components for LLM-powered applications."
authors = ["Marc Chan <marc.w.chan@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.0.336"
llama-index = "^0.9.2"
jupyterlab = "^4.0.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pyupgrade = "^3.10.1"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
